--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
       <div id="spin-container">
         <!-- Add your images (or video) here -->
         <img
-          src="https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/e5/f8/08/e5f808ed-bf8d-4f06-98f6-47a139040e36/859785697697_cover.jpg/632x632bb.webp"
+          src="https://s3.amazonaws.com/pub.tunecore.com/artwork/medium/74/82/77/6/7482776.jpg?1710731348"
           alt=""
         />
         <img
-          src="https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/e5/f8/08/e5f808ed-bf8d-4f06-98f6-47a139040e36/859785697697_cover.jpg/632x632bb.webp"
+          src="https://s3.amazonaws.com/pub.tunecore.com/artwork/medium/75/25/17/4/7525174.jpg?1711957487"
           alt=""
         />
         <img
-          src="https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/e5/f8/08/e5f808ed-bf8d-4f06-98f6-47a139040e36/859785697697_cover.jpg/632x632bb.webp"
+          src="https://s3.amazonaws.com/pub.tunecore.com/artwork/medium/75/59/15/9/7559159.jpg?1712211841"
           alt=""
         />
         <img
