--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,user-scalable=no" />
     <title>ZAD Musics</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/ShayeghB/ShayeghB.github.io/master/img/favicon.ico">
+    <link rel="icon" href="https://raw.githubusercontent.com/TheShayegh/TheShayegh.github.io/master/img/favicon.ico">
     <style>
       * {
         margin: 0;
@@ -82,7 +82,7 @@
         color: #fff;
       }
       .groundicon {
-        background: url('https://github.com/ShayeghB/ShayeghB.github.io/blob/master/img/favicon.png?raw=true');
+        background: url('https://github.com/TheShayegh/TheShayegh.github.io/blob/master/img/favicon.png?raw=true');
         background-size: 25px 25px;
         height: 25px;
         width: 25px;
@@ -173,7 +173,7 @@
           alt=""
         />
         <img
-          src="https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/e5/f8/08/e5f808ed-bf8d-4f06-98f6-47a139040e36/859785697697_cover.jpg/632x632bb.webp"
+          src="https://i.ytimg.com/vi/BY22PaPd1Vc/maxresdefault.jpg"
           alt=""
         />
         <img
