--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           alt=""
         />
         <img
-          src="https://i.ytimg.com/vi/BY22PaPd1Vc/maxresdefault.jpg"
+          src="https://m.media-amazon.com/images/I/51JFhkd+qQL._UXNaN_FMwebp_QL85_.jpg"
           alt=""
         />
         <img
