--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
           src="https://m.media-amazon.com/images/I/51NYWQpUOPL._UX358_FMwebp_QL85_.jpg"
           alt=""
         />
+        <img
+          src="https://m.media-amazon.com/images/I/51LaLLZscLL._UX716_FMwebp_QL85_.jpg"
+          alt=""
+        />
+        <!--  -->
 
         <!-- Example image with link -->
         <!-- <a
