--- a/index.html
+++ b/index.html
@@ -253,7 +253,39 @@
      style="opacity: 0.95; margin: 0px 0.1em; color: hsl(255,0%,90%); font-size: 4rem;" 
      data-testid="itunes">
      <svg style="fill: currentColor; color: currentColor; width: 1em; height: 1em;" viewBox="0 0 24 24" class="Icon jsx-599705376">
-       <path d="M11.93 5.172c2.57.08 4.725-2.715 4.364-5.172-2.4.165-4.824 2.
+       <path d="M11.93 5.172c2.57.08 4.725-2.715 4.364-5.172-2.4.165-4.824 2.686-4.363 5.172zm8.15 13.209c.65-.987.89-1.489 1.396-2.608-3.667-1.386-4.258-6.571-.627-8.558-1.11-1.383-2.664-2.182-4.13-2.182-1.943 0-2.762.925-4.109.925-1.389 0-2.445-.921-4.122-.921-1.65 0-3.406 1.003-4.515 2.713-1.568 2.41-1.3 6.94 1.238 10.806.907 1.376 2.119 2.93 3.7 2.944.656.006 1.093-.188 1.566-.398 1.424-.633 2.875-.655 4.297-.005.46.21.887.406 1.536.4 1.585-.01 2.865-1.733 3.77-3.116z"></path>
+     </svg>
+  </a>
+
+  <a href="https://music.youtube.com/channel/UC5un8_4_ECE_NlOc6Y8iymA" title="YouTube Music" aria-label="YouTube Music" 
+     class="jsx-1553688301 jsx-552619939 jsx-599705376 withFocusStyle withActiveStyle withHoverOpacityFrom withFocusStyle" 
+     style="opacity: 0.95; margin: 0px 0.1em; color: hsl(255,0%,90%); font-size: 4rem;" 
+     data-testid="youtubemusic">
+     <svg style="fill: currentColor; color: currentColor; width: 1em; height: 1em;" viewBox="0 0 24 24">
+       <circle cx="12" cy="12" r="10" fill="white"/>
+       <circle cx="12" cy="12" r="8.5" fill="black"/>
+       <polygon points="9,7 17,12 9,17" fill="white"/>
+     </svg>
+  </a>
+
+  <a href="https://www.amazon.com/music/player/artists/B0CYJCP41W/behzad-shayegh" title="Amazon Music" aria-label="Amazon Music" 
+     class="jsx-1553688301 jsx-552619939 jsx-599705376 withFocusStyle withActiveStyle withHoverOpacityFrom withFocusStyle" 
+     style="opacity: 0.95; margin: 0px 0.1em; color: hsl(255,0%,90%); font-size: 4rem;" 
+     data-testid="amazonMusic">
+     <svg style="fill: currentColor; color: currentColor; width: 1em; height: 1em;" viewBox="0 0 24 24" class="Icon jsx-599705376">
+       <path fill-rule="evenodd" d="M11.08 15.54c-1.06 0-1.68-.81-1.68-2 0-2.37 2.11-2.8 4.12-2.8 0 1.74-.05 4.8-2.44 4.8zm5.23 2.56a.57.57 0 0 1-.66.06c-.92-.76-1.08-1.12-1.59-1.85-2.54 3.22-8.7 2.84-8.7-2.3 0-4.61 4.65-5.5 8.15-5.48 0 0 .13-1.7-.33-2.37-.97-1.46-3.46-.6-3.78.94-.05.25-.23.5-.48.51l-2.69-.3c-.22-.04-.48-.22-.41-.57.62-3.26 3.56-4.24 6.2-4.24 1.34 0 3.06.4 4.16 1.38 1.85 1.62 1.06 6.86 1.22 9.08 0 1.3.54 1.87 1.05 2.57.18.25.21.55-.01.73L16.3 18.1zm3.12 1.74A16.09 16.09 0 0 1 2.3 18.5c-.25-.18-.42.14-.22.37 4.42 5.16 12.44 6.44 17.65 1.6.36-.33.05-.83-.31-.63zm.58 1.94c-.08.2.1.28.28.13 1.17-.98 1.47-3.04 1.23-3.34-.24-.29-2.29-.54-3.54.34-.2.13-.16.32.06.3.7-.1 2.27-.28 2.55.08.28.36-.31 1.83-.58 2.49z"></path>
+     </svg>
+  </a>
+
+  <a href="https://www.instagram.com/the.shayegh/" title="Instagram" aria-label="Instagram" 
+     class="jsx-1553688301 jsx-552619939 jsx-599705376 withFocusStyle withActiveStyle withHoverOpacityFrom withFocusStyle" 
+     style="opacity: 0.95; margin: 0px 0.1em; color: hsl(255,0%,90%); font-size: 4rem;" 
+     data-testid="instagram">
+     <svg style="fill: currentColor; color: currentColor; width: 1em; height: 1em;" viewBox="0 0 24 24" class="Icon jsx-599705376">
+       <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 2C5.679 4 4 5.679 4 7.75v8.5C4 18.321 5.679 20 7.75 20h8.5c2.071 0 3.75-1.679 3.75-3.75v-8.5C20 5.679 18.321 4 16.25 4h-8.5zM12 7.5A4.5 4.5 0 1 1 7.5 12 4.5 4.5 0 0 1 12 7.5zm0 2A2.5 2.5 0 1 0 14.5 12 2.5 2.5 0 0 0 12 9.5zm4.75-.75a1 1 0 1 11-0-1 1 1 0 0 1 1 1z"></path>
+     </svg>
+  </a>
+</div>
 
     <script>
       // Author: Hoang Tran (https://www.facebook.com/profile.php?id=100004848287494)
